src/bar.css
* {
  font-family: arial, sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.sidebar {
  z-index: 2349087294;
  position: fixed;
  overflow:auto;
  width: 13em;
  height: 30em;
  background-color: rgb(230, 230, 230);
  border-top-right-radius: 2rem;
  border-bottom-right-radius: 2rem;
  border-style: solid;
  border-color: rgb(30, 111, 187);
  padding: 1rem 0;
  overflow-wrap: break-word;
  transition: 0.1s all ease-in-out;
}
.bartab {
  z-index: 2349087294;
  border-radius: 5px 15px 15px 5px;
  position: fixed;
  background-color: rgb(30, 111, 187);
  overflow-wrap: break-word;
  -webkit-box-shadow: 1px 1px 10px rgb(30, 111, 187);
  width: 2rem;
  height: 2rem;
  border: 2px solid rgb(30, 111, 187);
  outline: none;
  cursor: pointer;
}

.filter {
  width: 80%;
  margin: 0 1rem;
  outline: none;
}

.contents {
  padding: 0 1rem;
}

.horL {
  width: 100%;
  border-bottom: 0.5px solid #c6c4c4;
}

div::-webkit-scrollbar {
  width: 5px;
}

/* Track */
div::-webkit-scrollbar-track {
  background: transparent; 
}
 
/* Handle */
div::-webkit-scrollbar-thumb {
  background: #888; 
}

/* Handle on hover */
div::-webkit-scrollbar-thumb:hover {
  background: #555; 
}

div::-webkit-scrollbar-track-piece:end {
  background: transparent;
  margin-bottom: 10px; 
}

div::-webkit-scrollbar-track-piece:start {
  background: transparent;
  margin-top: 10px;
}

